[package]
name = "crab_engine"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.51"
js-sys = "0.3.55"
#rayon = "1.5"
wasm-bindgen = "0.2"
web-sys = "0.3.55"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
crossterm = "0.22.1"
#wasm-bindgen-rayon = {version = "1.0", features = ["no-bundler"]}
